--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "@element-plus/icons-vue": "^2.1.0",
         "axios": "^1.4.0",
+        "dayjs": "^1.11.8",
         "element-plus": "^2.3.5",
+        "lodash": "^4.17.21",
         "mitt": "^3.0.0",
         "vue": "^3.2.47"
     },
