--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "Server": { "Ip": "127.0.0.1", "Port": "3007", "RunModel": "debug" },
+    "Server": { "Ip": "127.0.0.1", "Port": "3007", "RunModel": "release" },
     "DBClient": {
         "ip": "127.0.0.1",
         "username": "sa",
-        "password": "2001026",
+        "password": "20010126",
         "db_name": "WZ_MY",
         "isEc": 0
     }
