插入医保代码,流水号等；增加收费价格字段

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "Server": { "Ip": "127.0.0.1", "Port": "3007", "RunModel": "release" },
+    "Server": { "Ip": "127.0.0.1", "Port": "3007", "RunModel": "debug" },
     "DBClient": {
         "ip": "127.0.0.1",
         "username": "sa",
