add IPWhiteList Config

--- a/config.json
+++ b/config.json
@@ -6,5 +6,8 @@
         "password": "123456",
         "db_name": "WZ_MY",
         "isEc": 0
+    },
+    "IPWhite": {
+        "IPWhiteList": ["127.0.0.1"]
     }
 }
