--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
         "lodash": "^4.17.21",
         "mitt": "^3.0.0",
         "vue": "^3.2.47",
+        "vue-router": "^4.6.4",
         "xlsx-js-style": "^1.2.0"
     },
     "devDependencies": {
